@@ -15,6 +15,8 @@
  */
 package org.dx42.needy.parser
 
+import java.util.Map
+
 import org.codehaus.groovy.control.MultipleCompilationErrorsException
 import org.dx42.needy.Dependency
 import org.slf4j.Logger
@@ -34,7 +36,7 @@ class GradleDependencyParser implements DependencyParser {
 	"""
 	
 	@Override
-	List<Dependency> parse(String applicationName, String source) {
+	List<Dependency> parse(String applicationName, String source, Map<String, Object> binding) {
 		if (source == null) {
 			throw new IllegalArgumentException("Parameter source was null")
 		}
